# pulse

./: .buildinfo  .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.html  CONTRIBUTING.md  DEMO.html  Dockerfile  LICENSE  Makefile  README.html  README.md  _config.yml  _toc.yml  balance_laws.html  biaxial_stress_test.html  boundary_conditions.html  cardiac_mechanics_intro.html  compressible_model.html  compute_stress_strain.html  constitutive_relations.html  custom_geometry.html  demo_custom_material.html  demo_fixedpointunloader.html  environment.yml  force_balance.html  from_xml.html  genindex.html  hyperalsticity.html  implementation_details.html  incompressibility.html  index.html  index.ipynb  kinematics.html  klotz_curve.html  meta.yaml  modules.html  objects.inv  (+21 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: conda_publish.yml  github-pages.yml  main.yml
_modules/: abc.html  index.html  pulse.html
_modules/pulse/: dolfin_utils.html  example_meshes.html  geometry.html  geometry_utils.html  io_utils.html  iterate.html  kinematics.html  material.html  mechanicsproblem.html  numpy_mpi.html  setup_parameters.html  solver.html  unloader.html  unloading_utils.html  utils.html
_sources/: README.md  biaxial_stress_test.ipynb  compressible_model.ipynb  compute_stress_strain.ipynb  constitutive_relations.md  custom_geometry.ipynb  demo_custom_material.ipynb  demo_fixedpointunloader.ipynb  from_xml.ipynb  implementation_details.md  incompressibility.md  index.rst.txt  klotz_curve.ipynb  modules.rst  optimal_control.ipynb  problem1.ipynb  problem2.ipynb  problem3.ipynb  pulse.example_meshes.rst.txt  pulse.material.rst  pulse.rst  rigid_motion.ipynb  shear_experiment.ipynb  simple_ellipsoid.ipynb  unit_cube_demo.ipynb
_sources/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_sources/demos/: demo_fixedpointunloader.ipynb.txt  demos.rst.txt  rigid_motion.ipynb.txt  shear_experiment.ipynb.txt  simple_ellipsoid.ipynb.txt
_sources/docs/: DEMO.md  biaxial_stress_test.ipynb  compressible_model.ipynb  compute_stress_strain.ipynb  custom_geometry.ipynb  demo_custom_material.ipynb  demo_fixedpointunloader.ipynb  from_xml.ipynb  klotz_curve.ipynb  optimal_control.ipynb  problem1.ipynb  problem2.ipynb  problem3.ipynb  rigid_motion.ipynb  shear_experiment.ipynb  simple_ellipsoid.ipynb  unit_cube_demo.ipynb
_sources/joss/: paper.md
_static/: documentation_options.js
conda.recipe/: meta.yaml
demo/: bending_rod.py  demo_fixedpointunloader.py  lv_demo.py  unit_cube_demo.py
demo/benchmark/: problem1.py  problem2.py  problem3.py
demo/biaxial_stress_test/: biaxial_stress_test.ipynb  biaxial_stress_test.py
demo/closed_loop/: closed_loop.py  force.py  problem.py
demo/compressible_model/: compressible_model.py  demo.py  problem.py
demo/compute_stress_strain/: compute_stress_strain.py  demo.py
demo/creating_geometries/: biv_geometry.py  lv_geometry.py  lv_geometry_for_porous_problem.py
demo/custom_geometry/: custom_geometry.py  demo.py
demo/custom_material/: demo_custom_material.py
demo/from_xml/: demo.py  (+2 more)
demos/: biaxial_stress_test.html  biaxial_stress_test.ipynb  compressible_model.html  compute_stress_strain.html  demo_fixedpointunloader.html  demos.html  from_xml.html  klotz_curve.html  klotz_curve.ipynb  rigid_motion.html  rigid_motion.ipynb  shear_experiment.html  simple_ellipsoid.html
docs/: DEMO.html  DEMO.md  README.md  _config.yml  _toc.yml  api.html  api.rst  balance_laws.html  balance_laws.md  biaxial_stress_test.html  boundary_conditions.html  boundary_conditions.md  cardiac_mechanics_intro.html  cardiac_mechanics_intro.md  constitutive_relations.html  constitutive_relations.md  custom_geometry.html  force_balance.html  force_balance.md  hyperalsticity.html  hyperalsticity.md  implementation_details.html  incompressibility.html  incompressibility.md  kinematics.html  kinematics.md  klotz_curve.html  optimal_control.html  refs.bib  rigid_motion.html  shear_experiment.html
joss/: paper.bib  paper.html  paper.md
notebooks/: bechmark_problem1.ipynb  bechmark_problem2.ipynb  bechmark_problem3.ipynb  compressible_model.ipynb  custom_material.ipynb  klotz_curve.ipynb  simple_ellipsoid.ipynb  unit_cube_demo.ipynb  unloading.ipynb
pulse/: __init__.py  __version__.py  dolfin_utils.py  geometries.py  geometry.py  geometry_utils.py  io_utils.py  iterate.py  kinematics.py  mechanicsproblem.py  numpy_mpi.py  parameters.py  setup_parameters.py  solver.py  unloader.py  unloading_utils.py  utils.py
tests/: pytest.ini  run_all_demos.py  test_demos.py  test_dolfin_utils.py  test_geometry.py  test_iterate.py  test_kinematics.py  test_material.py  test_unloader.py  utils.py
(+153 files in other folders)
