[metadata]
name = fenics_pulse
description = A python library based on FEniCS that aims to solve problems in continuum mechanics, in particular cardiac mechanics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/pulse
author = Henrik Finsberg
author_email = henriknf@simula.no
license = LGPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = finite element, mechanics, cardiac, heart

[options]
packages = find:
install_requires =
    daiquiri
    h5py
    numpy
    scipy
    dataclasses;python_version <= "3.6"
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests
    demos

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    pre-commit
    types-dataclasses
docs =
    Sphinx
    jupyter-book
    myst-parser
    pandoc
    sphinxcontrib-bibtex
mesh =
    gmsh
    ldrb
    meshio
plot =
    fenics-plotly
    matplotlib
test =
    black
    flake8
    jupytext
    mypy
    pytest
    pytest-cov
    pytest-env

[options.package_data]
pulse.example_meshes = *.h5

[bumpversion]
current_version = 2020.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pulse/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E402, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=pulse --cov-report html -v --cov-report term-missing
testpaths =
    tests
env =
    FENICS_PLOTLY_SHOW=0

[mypy]
files = pulse,tests
ignore_missing_imports = true
